# contracts

./: .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .npmignore  .prettierignore  .prettierrc  .rustfmt.toml  .solhint.json  .yarnrc.yml  AGENTS.md  Anchor.toml  CLAUDE.md  CODEOWNERS  CONSTANTS_README.md  FOUNDRY_DEPLOYMENT.md  HELLO_CODEX.md  KNOWN_ISSUES.md  LICENSE  README.md  SpokePoolUpgrades.md  TASKS.md  args.js  chain-adapter-tests-migration.txt  diff.diff  file.txt  foundry.toml  funding.json  hardhat.config.ts  index.ts  mBjr29h29TJ8m7hXZpddwFWLjFcw6q3oNWmiGce7Txv.json  mmBXvSn3ZiYCy9NC2hRY2ZfSKb9qaC8Qgn8yn8wHudn.json  out.out  package.json  remappings.txt  rust-toolchain.toml  stdJsonHandler.json  test-utils.ts  test.ts  tsconfig.json  (+1 more)
.claude/: settings.json
.openzeppelin/: unknown-31337.json
.upgradable/: lens-sepolia.json  lens.json  zkSync-era.json  zkSync-testnet.json
broadcast/: DeployedAddresses.sol  deployed-addresses.json  deployed-addresses.md
cache-foundry-local/: solidity-files-cache.json
contracts/: AcrossConfigStore.sol  AcrossEventEmitter.sol  AdapterStore.sol  AlephZero_SpokePool.sol  Arbitrum_SpokePool.sol  BalanceActionProxy.sol  BalanceCallProxy.sol  Base_SpokePool.sol  Blast_DaiRetriever.sol  Blast_SpokePool.sol  Bob_SpokePool.sol  Boba_SpokePool.sol  BondToken.sol  BridgeAdmin.sol  Cher_SpokePool.sol  ConfigStore.sol  Create2Factory.sol  DoctorWho_SpokePool.sol  EIP712CrossChain.sol  Ethereum_SpokePool.sol  GlobalConfigStore.sol  HubPool.sol  HubPoolInterface.sol  HubPoolStore.sol  Ink_SpokePool.sol  Intermediate_TokenRetriever.sol  L2_TokenRetriever.sol  Lens_SpokePool.sol  Linea_SpokePool.sol  Lisk_SpokePool.sol  Lockable.sol  LpTokenFactory.sol  MerkleLib.sol  Mode_SpokePool.sol  OP_SpokePool.sol  Optimism_SpokePool.sol  Optimism_Wrapper.sol  Ovm_SpokePool.sol  PermissionSplitter.sol  PermissionSplitterProxy.sol  (+31 more)
deploy/: 001_deploy_hubpool.ts  001_deploy_optimism_spokepool.ts  002_deploy_optimism_adapter.ts  003_deploy_optimism_spokepool.ts  004_deploy_arbitrum_adapter.ts  004_deploy_ethereum_adapter.ts  005_deploy_arbitrum_spokepool.ts  005_deploy_ethereum_spokepool.ts  006_deploy_ethereum_adapter.ts  007_deploy_ethereum_spokepool.ts  008_deploy_polygon_token_bridger_mainnet.ts  009_deploy_polygon_adapter.ts  010_deploy_polygon_token_bridger_polygon.ts  011_deploy_polygon_spokepool.ts  012_deploy_boba_adapter.ts  012_deploy_rate_model_store.ts  013_deploy_boba_spokepool.ts  014_deploy_config_store.ts  014_deploy_rate_model_store.ts  015_deploy_zksync_adapter.ts  016_deploy_zkstack_spokepool.ts  016_deploy_zksync_spokepool.ts  017_deploy_ethereum_merkle_distributor.ts  018_deploy_arbitrum_rescueadapter.ts  018_deploy_optimism_spokeadapter.ts  019_deploy_boba_spokeadapter.ts  019_deploy_bond_token.ts  020_deploy_arbitrum_sendtoken_adapter.ts  020_deploy_arbitrum_spokeadapter.ts  021_deploy_erc1155.ts  021_deploy_polygon_spokeadapter.ts  022_deploy_ethereum_spokeadapter.ts  022_upgrade_spokepool.ts  024_deploy_base_adapter.ts  (+89 more)
programs/multicall-handler/: Cargo.toml
programs/multicall-handler/src/: lib.rs
programs/sponsored-cctp-src-periphery/: Cargo.toml
programs/sponsored-cctp-src-periphery/src/: constants.rs  error.rs  event.rs  lib.rs  state.rs
programs/sponsored-cctp-src-periphery/src/instructions/: admin.rs  deposit.rs  initialize.rs  maintenance.rs  mod.rs
programs/sponsored-cctp-src-periphery/src/state/: state.rs
programs/sponsored-cctp-src-periphery/src/utils/: cctp_v2_message.rs  mod.rs  signer.rs  sponsored_cctp_quote.rs  testable_utils.rs
programs/svm-spoke/: Cargo.toml
programs/svm-spoke/src/: constants.rs  constraints.rs  error.rs  event.rs  lib.rs  types.rs  utils.rs
programs/svm-spoke/src/common/: mod.rs  relay_data.rs  v3_relay_data.rs
programs/svm-spoke/src/instructions/: admin.rs  bundle.rs  create_token_accounts.rs  deposit.rs  fill.rs  handle_receive_message.rs  instruction_data.rs  instruction_params.rs  mod.rs  refund_claims.rs  slow_fill.rs  testable.rs  token_bridge.rs
programs/svm-spoke/src/state/: delegate.rs  fill.rs  instruction_data.rs  instruction_params.rs  mod.rs  refund_account.rs  root_bundle.rs  route.rs  state.rs  transfer_liability.rs
programs/svm-spoke/src/utils/: bitmap_utils.rs  cctp_utils.rs  delegate_utils.rs  deposit_utils.rs  fill_utils.rs  merkle_proof_utils.rs  message_utils.rs  mod.rs  transfer_utils.rs
programs/test/: Cargo.toml
programs/test/src/: lib.rs
(+2150 files in other folders)
