[package]
name = "sponsored-cctp-src-periphery"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sponsored_cctp_src_periphery"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["event-cpi"]}
anchor-spl = "0.31.1"
