[package]
name = "svm-spoke"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "svm_spoke"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed","event-cpi"]}
anchor-spl = "0.31.1"
multicall-handler = { path = "../multicall-handler" }
solana-security-txt = "1.1.1"